--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@popperjs/core": "^2.11.6",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "cors": "^2.8.5",
     "jwt-decode": "^3.1.2",
     "react": "^18.1.0",
     "react-bootstrap": "^2.5.0",
@@ -19,7 +20,8 @@
     "react-webcam": "^7.0.1",
     "sweetalert2": "^10.11.1",
     "sweetalert2-react-content": "^3.2.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webcam-react": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
