--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "cors": "^2.8.5",
+    "jsqr": "^1.4.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.1.0",
     "react-bootstrap": "^2.5.0",
@@ -21,7 +22,8 @@
     "sweetalert2": "^10.11.1",
     "sweetalert2-react-content": "^3.2.2",
     "web-vitals": "^2.1.4",
-    "webcam-react": "^5.2.0"
+    "webcam-react": "^5.2.0",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
