--- a/.env.production
+++ b/.env.production
@@ -22,3 +22,5 @@ REACT_APP_REQUEST_TODOS=https://bhornw6rd7.execute-api.us-east-1.amazonaws.com/d
 REACT_APP_REQUEST_ACTUALIZAR=https://bhornw6rd7.execute-api.us-east-1.amazonaws.com/dev/actualizar-request
 REACT_APP_REQUEST_CREAR=https://bhornw6rd7.execute-api.us-east-1.amazonaws.com/dev/request
 REACT_APP_REQUEST_ELIMINAR=https://bhornw6rd7.execute-api.us-east-1.amazonaws.com/dev/request
+REACT_APP_REQUEST_RECIBIR=https://api.fonasa.cl/LectorQR/recibir-imagen
+REACT_APP_REQUEST_DATA=https://api.fonasa.cl/FONASACertificacionTrabajadorREST/
