--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^3.1.1",
     "react-webcam": "^7.0.1",
+    "serve": "^14.1.2",
     "sweetalert2": "^10.11.1",
     "sweetalert2-react-content": "^3.2.2",
     "web-vitals": "^2.1.4",
