--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cors": "^2.8.5",
     "jsqr": "^1.4.0",
     "jwt-decode": "^3.1.2",
+    "qrcode": "^1.5.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.5.0",
     "react-cookie": "^4.1.1",
