--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-ui/core": "^4.12.4",
     "@popperjs/core": "^2.11.6",
     "axios": "^0.27.2",
@@ -17,6 +20,7 @@
     "react-dom": "^18.1.0",
     "react-feather": "^2.0.10",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.7.1",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
