--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^3.1.1",
+    "react-web-qr-reader": "^1.0.4",
     "react-webcam": "^7.0.1",
     "serve": "^14.1.2",
     "sweetalert2": "^10.11.1",
