--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-web-qr-reader": "^1.0.4",
     "react-webcam": "^7.0.1",
     "serve": "^14.1.2",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^10.11.1",
     "sweetalert2-react-content": "^3.2.2",
     "web-vitals": "^2.1.4",
