--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-feather": "^2.0.10",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.7.1",
+    "react-modal": "^3.16.1",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
