--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "@popperjs/core": "^2.11.6",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "chart.js": "^4.1.2",
     "cors": "^2.8.5",
     "jsqr": "^1.4.0",
     "jwt-decode": "^3.1.2",
     "qrcode": "^1.5.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.5.0",
+    "react-chartjs-2": "^5.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.1.0",
     "react-feather": "^2.0.10",
@@ -28,6 +30,7 @@
     "react-select": "^3.1.1",
     "react-web-qr-reader": "^1.0.4",
     "react-webcam": "^7.0.1",
+    "rsuite": "^5.24.1",
     "serve": "^14.1.2",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^10.11.1",
