--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.11.6",
+    "@mui/styled-engine-sc": "^5.11.0",
     "@popperjs/core": "^2.11.6",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
@@ -35,6 +36,7 @@
     "react-webcam": "^7.0.1",
     "rsuite": "^5.24.1",
     "serve": "^14.1.2",
+    "styled-components": "^5.3.6",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^10.11.1",
     "sweetalert2-react-content": "^3.2.2",
