--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-ui/core": "^4.12.4",
+    "@material-ui/pickers": "^3.3.10",
     "@mui/material": "^5.11.6",
     "@mui/styled-engine-sc": "^5.11.0",
+    "@mui/x-date-pickers": "^5.0.16",
     "@popperjs/core": "^2.11.6",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "chart.js": "^4.1.2",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.7",
     "jsqr": "^1.4.0",
     "jwt-decode": "^3.1.2",
     "qrcode": "^1.5.1",
